--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>은혜의 스케줄 (2025)</title>
+    <title>군산교회 청년회 임원 캘린더</title>
     <!-- Tailwind CSS를 불러와서 예쁘게 꾸며줍니다. -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts에서 'Noto Sans KR' 폰트를 불러옵니다. -->
@@ -55,6 +55,9 @@
     <!-- 배경이 비치도록 반투명 흰색 배경과 블러 효과(backdrop-blur) 추가 -->
     <div class="w-full max-w-7xl bg-white/80 backdrop-blur-sm rounded-2xl shadow-lg p-4 md:p-8">
         
+        <!-- 추가된 메인 타이틀 -->
+        <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-8">군산교회 청년회 임원 캘린더</h1>
+
         <div class="flex items-center justify-between mb-6">
             <button id="prev-month" class="p-2 rounded-full hover:bg-white/50 transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
