--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <!-- 배경이 비치도록 반투명 흰색 배경과 블러 효과(backdrop-blur) 추가 -->
     <div class="w-full max-w-7xl bg-white/80 backdrop-blur-sm rounded-2xl shadow-lg p-4 md:p-8">
         
-        <!-- 추가된 메인 타이틀 -->
-        <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-8">군산교회 청년회 임원 캘린더</h1>
+        <!-- 추가된 메인 타이틀 (모바일 글자 크기 조정) -->
+        <h1 class="text-2xl md:text-4xl font-bold text-center text-gray-900 mb-8">군산교회 청년회 임원 캘린더</h1>
 
         <div class="flex items-center justify-between mb-6">
             <button id="prev-month" class="p-2 rounded-full hover:bg-white/50 transition-colors">
